<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SettingsActivity" >

    <TextView
        android:id="@+id/tvAdvSearchView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="17dp"
        android:text="@string/adv_search_view"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvImageSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvAdvSearchView"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="26dp"
        android:text="@string/imageSize" />
    
     <TextView
        android:id="@+id/tvColorFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvImageType"
        android:layout_alignLeft="@+id/tvImageSize"
        android:layout_marginBottom="24dp"
        android:text="@string/colorFilter" />
     
     <TextView
        android:id="@+id/tvImageType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvSiteFilter"
        android:layout_alignLeft="@+id/tvSiteFilter"
        android:layout_marginBottom="25dp"
        android:text="@string/imageType" />
    
    <EditText
        android:id="@+id/etSiteFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvSiteFilter"
        android:layout_alignLeft="@+id/bSave"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/tvSiteFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvColorFilter"
        android:layout_centerVertical="true"
        android:text="@string/siteFilter" />

    <Button
        android:id="@+id/bSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etSiteFilter"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:onClick="onSave"
        android:text="@string/save" />
    
   <!--  <Spinner
	 android:entries="@array/planets_arrays"
         android:prompt="@string/planets_prompt" -->

    <Spinner
        android:id="@+id/sImageSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvImageSize"
        android:layout_alignLeft="@+id/bSave"
        android:layout_alignRight="@+id/etSiteFilter"
        android:entries="@array/image_size"
        android:textAlignment="gravity"
        android:gravity="right" />

    <Spinner
        android:id="@+id/sColorFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvColorFilter"
        android:layout_alignLeft="@+id/sImageSize"
        android:layout_alignRight="@+id/sImageSize"
        android:entries="@array/color_filter" />

    <Spinner
        android:id="@+id/sImageType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvImageType"
        android:layout_alignLeft="@+id/sColorFilter"
        android:layout_alignRight="@+id/sColorFilter" 
        android:entries="@array/image_type"/>

</RelativeLayout>